a correction in the notebook 3

--- a/folder/worked_example/model_update/2.0_use_mri_data.ipynb
+++ b/folder/worked_example/model_update/2.0_use_mri_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\User\\\\OneDrive\\\\Documents\\\\WORK\\\\JRF_GaitAnalysis\\\\modelling_paper\\\\repo\\\\folder\\\\model_update'"
+       "'c:\\\\Users\\\\User\\\\OneDrive\\\\Documents\\\\WORK\\\\JRF_GaitAnalysis\\\\modelling_paper\\\\repo\\\\folder\\\\worked_example\\\\model_update'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e0680f358ae4a7ba8f2520e3f504081",
+       "model_id": "5b34e55fa01f481482ee0822a7f2d40e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x1790fbf8290_14&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20812601410_14&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,18 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "673ac8be5be64c8482fc2fa2e5b95a65",
+       "model_id": "3001feecc0b244b29532a2192fae2ec1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x179f10ed350_15&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x208125fe290_15&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -312,18 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2445a6dbc38d46fc9174f696e675d2e3",
+       "model_id": "68854e2e03114e89b7ba27c020439f57",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x179619fd6d0_16&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20811373810_16&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,18 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n",
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create rotations to child\n",
     "bone_markers = list(mri_dict['femur_r'].index)\n",
@@ -418,18 +409,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a39ee6fb2bb40d6b82a77a3fb7737e3",
+       "model_id": "ae4d772547ec4440b0e3d7999de2ceb3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x1795d9d6b50_17&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x208500088d0_17&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -460,18 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0f3c16b877e4ff088e9affc1c8633b1",
+       "model_id": "5fee1df595664ae0b69ca14fd136e2db",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x1794d1f5690_18&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x208113779d0_18&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,18 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d2b50ac96924bc88711a89f9c898f24",
+       "model_id": "ec3c2600f37c4d0998e556a4bd21df4b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a41339250_19&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x209074f9fd0_19&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -585,18 +576,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de88930843f744769b2ba7c7b4ec969c",
+       "model_id": "97efdcde585747f38c72deeb868d655a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x1790e937710_20&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20811376e50_20&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -638,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -691,18 +682,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbd455fd9329479b8c71771dc8dccb02",
+       "model_id": "697618777aef45e990b33986f8155447",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a4a463b50_21&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20907593150_21&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -734,18 +725,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aea5e65bc0a94c748cc06d4fd82b5466",
+       "model_id": "c178ba9d0bb24087a5a324c071233b81",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17910a2f150_22&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x2085015c950_22&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -782,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,25 +789,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb4458e79219477fa99d72a723aa2cd7",
+       "model_id": "fd07b8e9987448059acc64b69e383421",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a4a44f210_23&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20864da7050_23&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -854,18 +838,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eec51deb08bd4f7481384a24a8aa5494",
+       "model_id": "e13fb320f455462b9a1c0515a34e5d3e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a6a1fe550_24&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20931ce6310_24&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -908,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,9 +913,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the determinant is less than zero, recalculate r\n"
+     ]
+    }
+   ],
    "source": [
     "# create a rotation to child\n",
     "bone_markers = list(mri_dict['tibia_r'].index)\n",
@@ -955,18 +947,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c29aed7ad687493ca2b5da2ff293d13f",
+       "model_id": "0fd1ce31021a46d5860d9a52bacfa1d8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a81dd7950_25&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x2084fed43d0_25&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1000,18 +992,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9919711b6719426ca9f180bf0c7c80d3",
+       "model_id": "1fed648d5515499e9e735a92fed1bd25",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a81e42a90_26&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x2093d70b2d0_26&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1054,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,17 +1067,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bone_markers = list(mri_dict['tibia_l'].index)\n",
     "\n",
@@ -1106,18 +1090,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffa50f1545894981aa506318280c9f27",
+       "model_id": "4baddb1eed5a4f6ea390b2adf7a2a178",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54980/index.html?ui=P_0x17a8c8bdbd0_27&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x209532f3190_27&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
