--- a/folder/worked_example/model_update/2.1_after_controlling_mri_data.ipynb
+++ b/folder/worked_example/model_update/2.1_after_controlling_mri_data.ipynb
@@ -46,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\User\\OneDrive\\Documents\\WORK\\JRF_GaitAnalysis\\modelling_paper\\repo\\folder\\final_results\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set output path -- this file will save results after the MRI adjustments of muscles\n",
     "output_path = os.path.join(root_dir, 'final_results')\n",
@@ -80,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\User\\OneDrive\\Documents\\WORK\\JRF_GaitAnalysis\\modelling_paper\\repo\\folder\\mri\\control\n"
+      "c:\\Users\\User\\OneDrive\\Documents\\WORK\\JRF_GaitAnalysis\\modelling_paper\\repo\\folder\\worked_example\\mri\\control\n"
      ]
     }
    ],
@@ -178,12 +170,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cec14025e644480fa33226dde6c00fbb",
+       "model_id": "3c25aa862a7b4f43b21ef00b47a3d948",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x246698bc150_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274b7c54150_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -288,12 +280,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a7b98e1f2334ad6b5f2caf4af14374b",
+       "model_id": "001d4c7226524f4da84da1ebc6728655",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x2466ba9e910_1&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274ba55d950_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -322,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,18 +351,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39853086bb1445a39a69c11c470f62de",
+       "model_id": "069066807e244283be96d1da7091bc64",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24642c902d0_2&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274ff14fb10_2&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -412,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,18 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n",
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create rotations to child\n",
     "bone_markers = list(mri_dict['femur_r'].index)\n",
@@ -461,18 +444,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68bec1a5c77045c198b28ae08e48f562",
+       "model_id": "f72351f81d384ba6926ad7d9a831b99b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24642d6aad0_3&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274ba565350_3&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -496,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,18 +515,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23cc4d8b7793413f9ccf14d78dab2586",
+       "model_id": "9053d078772a4cab914d6c79e9b3690f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24642e48410_4&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x2748b25d950_4&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -585,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,18 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44252950700e4c4ca3951e27048891fa",
+       "model_id": "a56cb0e7746a4f6baca45bd6ddda4134",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x246377df210_5&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x2748b18ce50_5&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -649,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,18 +661,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92b127cce1274ebe885d3870b514ae5a",
+       "model_id": "b2690c7ff375412ab9c6c193440440e1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24673c2b610_6&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x27497aa0ad0_6&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -731,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -780,18 +763,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "289ab74dddbb42b28852b6c91a90afbd",
+       "model_id": "9e24cec2cf304617b65576dfa91f1e94",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24687c33590_7&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x27497b4dc10_7&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -816,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,18 +835,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc33b4bde7b44fa79cddf8416e2b00b4",
+       "model_id": "d9113b638ded4b9d8756d985a8ef1818",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24687c62fd0_8&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274abaf9ad0_8&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -900,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,25 +898,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33b4af7971354a0a9a2b1e2d045c111e",
+       "model_id": "95928b0203564d6cb711b0cfe0c68fa0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x24673bf8b90_9&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274ff647f50_9&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -964,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,18 +969,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61c4a03875f048f9a3a4a5392173c1c8",
+       "model_id": "c3ecf4baabc24ac787bb73bb6da64466",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x246a31bef90_10&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x274ff6cff90_10&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1047,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,9 +1041,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the determinant is less than zero, recalculate r\n"
+     ]
+    }
+   ],
    "source": [
     "# create a rotation to child\n",
     "bone_markers = list(mri_dict['tibia_r'].index)\n",
@@ -1091,18 +1075,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0df7ee8d1c214f1d9999f17306cfcb66",
+       "model_id": "871de0a0db904f27989402faea665d3e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x246a3262b90_11&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x27521862f10_11&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1129,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,18 +1146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df551fe5a8a549a18000fba0e2603da5",
+       "model_id": "35dfd0135e76418eb9827503c71de662",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x246a3987f50_12&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x2752bb8ad10_12&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1216,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,17 +1239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bone_markers = list(mri_dict['tibia_l'].index)\n",
     "\n",
@@ -1286,18 +1262,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdff050d00fa498f852148a4d9f67d0f",
+       "model_id": "496059833870486fa27c89240206c766",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53213/index.html?ui=P_0x246cd81fbd0_13&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:52658/index.html?ui=P_0x27538d107d0_13&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1323,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
